* Version 4.2  "Compressor Road"

Unreleased.  Current line of development.

** Improvements

- All deprecated options and features of version 4.1 have been
  removed.

- The new Graph-Cut algorithm is the default primary seam-line
  generator.

- Fix a longstanding quirk, which allowed to load masks into Enblend
  and Enfuse that were unsuitable for processing.

- The OpenMP enabled versions of Enblend and Enfuse benefit from
  Google's TCMalloc library.

- Several exposure weight functions were added to Enfuse.  The choice
  is now up to the user.  The default still is the Gauss function as
  in all Enfuse versions before.

- Enblend and Enfuse now both can make use of the tremendous computing
  power in modern graphics cards.  To that end the binaries must be
  compiled with OpenCL support and the necessary drivers and or
  libraries must be installed on the host system.


** New Commandline Options

- Option `--exposure-weight-function' makes Enfuse's exposure weight
  function user selectable.  Previously weight function "gauss" was
  the only one (and hard-coded).

- The old Enfuse options `--exposure-mu' and `--exposure-sigma' got
  siblings called `--exposure-optimum' and `--exposure-width'
  respectively.  With exposure weight functions other than Gauss the
  restricted naming does not make sense anymore.

  Options `--exposure-mu' and `--exposure-sigma' are scheduled for
  withdrawal in a later version of Enfuse.

- For a long time Enblend has had an option to run the seam-line
  optimizer on the GPU.  Now, both Enblend and Enfuse sport `--gpu'
  options to offload computationally intensive tasks to any
  OpenCL-compatible GPU device.

  On systems with more than one device `--prefer-gpu' selects the
  desired GPU.


** Developer Stuff

- Support for older versions of the Boost filesystem library has been
  dropped.


** Package Maintainer Stuff

- Vigra version 1.9 or later is now required to build.
